--- a/core/templates/core/users/approve_users.html
+++ b/core/templates/core/users/approve_users.html
@@ -85,7 +85,7 @@
     {% else %}
     <div class="empty-state">
         <h3>No Pending User Registrations</h3>
-        <p>All user registrations have been reviewed.</p>
+        <p class="review-info">All user registrations have been reviewed.</p>
     </div>
     {% endif %}
 </div>
